--- a/frontend/src/styles/Portfolio.css
+++ b/frontend/src/styles/Portfolio.css
@@ -21,6 +21,11 @@
     overflow-y: scroll;
 }
 
+.grid-div-portfolio{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
 .title-div{
     width: 100%;
     display: grid;
@@ -40,6 +45,11 @@
     }
 }
 
+.grid-div-wrap-468{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
 .skills-list {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -52,6 +62,7 @@
 .skill {
     text-align: center;
     color: white;
+    width: 100%;
 }
 
 .skill-bar {
@@ -71,6 +82,37 @@
     margin: 0 auto;
     padding: 10px;
     margin-bottom: 20px;
+}
+
+.project-div-card{
+    display: grid; 
+    grid-template-columns: 2fr 1fr; 
+    gap: 20px;
+    background-color: #02222d; 
+    min-height: 250px; 
+    border-radius: 10px; 
+    width: 100%; 
+    padding: 20px; 
+    margin-bottom: 20px
+}
+
+.project-img{
+    width: 100%;
+    height: 200px;
+}
+
+.blog-div-card{
+    background-color: #02222d;
+    min-height: 300px;
+    border-radius: 10px;
+    width: 100%;
+    padding: 20px;
+    img{
+        min-width: 300px;
+        min-height: 200px;
+        margin: 0 auto;
+        margin-bottom: 15px;
+    }
 }
 
 .contact {
@@ -146,4 +188,64 @@
 .contact form textarea {
     height: 120px;
     resize: none;
+}
+
+@media(max-width: 768px){
+    .grid-div-portfolio{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: auto;
+    }
+
+    .data-display-title-div{
+        display: grid;
+        place-items: center;
+    }
+
+    .skills-list{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: auto;
+    }
+
+    .project-list{
+        width: 90%;
+    }
+
+    .project-div-card{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: auto;
+    }
+
+    .blog-div-card{
+        img{
+            width: 100%;
+            height: auto;
+            min-width: 200px;
+        }
+    }
+
+    .contact .info div a {
+        display: block;
+        word-break: break-all;
+        overflow-wrap: anywhere;
+        white-space: normal;
+    }
+}
+
+@media(max-width: 480px){
+    .grid-div-wrap-468{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: auto;
+    }
 }
